@@ -35,6 +35,9 @@ public:
 
 // Implementation
 protected:
+	void SetScale(int nScale);
+	void DisplayScale(void);
+	int m_nScale;
 	TCHAR m_szItemName[MAX_OBJECT_NAME + MAX_ITEM_NAME + 4];
 	CStatusBarCtrl m_wndStatusBar;
 	// Generated message map functions
@@ -44,6 +47,15 @@ protected:
 	afx_msg void OnSize(UINT nType, int cx, int cy);
 	afx_msg void OnSetFocus(CWnd* pOldWnd);
 	afx_msg void OnViewRefresh();
+	afx_msg void OnContextMenu(CWnd* pWnd, CPoint point);
+	afx_msg void OnDataScaleGbytes();
+	afx_msg void OnDataScaleGiga();
+	afx_msg void OnDataScaleKbytes();
+	afx_msg void OnDataScaleKilo();
+	afx_msg void OnDataScaleMbytes();
+	afx_msg void OnDataScaleMega();
+	afx_msg void OnDataScaleNormal();
+	afx_msg void OnDataCopytoclipboard();
 	//}}AFX_MSG
    afx_msg void OnListViewItemChange(LPNMLISTVIEW pNMHDR, LRESULT *pResult);
    afx_msg LRESULT OnGetSaveInfo(WPARAM wParam, WINDOW_SAVE_INFO *pInfo);
