@@ -15,22 +15,22 @@ Class4=CChildFrame
 Class7=CEventBrowser
 Class9=CMapView
 
-ResourceCount=176
+ResourceCount=177
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDA_SCRIPT_MANAGER
+Resource2=IDD_GRAPH_PROP_DATA
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDD_OBJECT_RELATIONS
-Resource5=IDD_SAVE_AGENT_CFG
+Resource4=IDD_ABOUTBOX
+Resource5=IDD_GROUP_PROPERTIES
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_NEW_USER
+Resource6=IDD_OBJECT_STATUS
 Class11=CProgressDialog
-Resource7=IDD_EDIT_TRAP
+Resource7=IDA_PACKAGE_MGR
 Class12=CObjectBrowser
-Resource8=IDD_CP_GENERAL
+Resource8=IDD_ADD_DCI
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDA_EPP
+Resource20=IDD_CREATE_TEMPLATE
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_OBJTOOL_COLUMNS
+Resource22=IDD_SELECT_EVENT
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_CREATE_CONDITION
+Resource24=IDD_CP_GENERAL
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_OBJECT_VPNC_GENERAL
+Resource27=IDD_NEW_USER
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_DATA_QUERY
-Resource32=IDD_REQUEST_PROCESSING
+Resource31=IDA_GRAPH
+Resource32=IDD_OBJECT_VPNC_GENERAL
 Class29=CUserSelectDlg
-Resource33=IDD_OBJECT_NETSRV_GENERAL
+Resource33=IDA_SCRIPT_MANAGER
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_EDIT_RULE_ALARM
-Resource36=IDD_SET_PASSWORD
+Resource35=IDD_OBJECT_COND_DATA
+Resource36=IDD_OBJTOOL_OPTIONS
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_CREATE_NODE
+Resource38=IDA_NETMAP
 Class33=CGroupPropDlg
-Resource39=IDD_CREATE_VPNC
-Resource40=IDD_MIB_BROWSER
-Resource41=IDD_OBJECT_NODE_POLL
+Resource39=IDD_SELECT_USER
+Resource40=IDD_SNMP_WALK
+Resource41=IDA_DATA_VIEW
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDD_GROUP_PROPERTIES
+Resource48=IDD_NEW_OBJECT_TOOL
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_SUBMAP_BKGND
+Resource50=IDD_EDIT_RULE_SEVERITY
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDD_CHANGE_PASSWORD
+Resource52=IDD_EDIT_RULE_ALARM
 Class48=CObjectSelDlg
-Resource53=IDD_OBJECT_PRESENTATION
-Resource54=IDA_OBJECT_BROWSER
+Resource53=IDD_OBJECT_COND_GENERAL
+Resource54=IDD_CREATE_TG
 Class49=CRuleCommentDlg
-Resource55=IDD_ADD_DCI
+Resource55=IDD_CREATE_NODE
 Class50=CEventSelDlg
-Resource56=IDD_CHANGE_IP
+Resource56=IDD_SELECT_OBJECT
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_SELECT_ACTION
+Resource58=IDA_EPP
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDD_GRAPH_PROP_SETTINGS
+Resource62=IDD_OBJECT_NODE_GENERAL
 Class52=CRuleSeverityDlg
-Resource63=IDA_PACKAGE_MGR
+Resource63=IDD_CREATE_NETSRV
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_EDIT_RULE_COMMENT
+Resource65=IDD_CHANGE_PASSWORD
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_DCI_THRESHOLDS
-Resource70=IDD_OBJECT_STATUS
+Resource69=IDD_REMOVE_TEMPLATE
+Resource70=IDD_DCI_COLLECTION
 Class57=CNewActionDlg
-Resource71=IDD_CREATE_TEMPLATE
+Resource71=IDA_TRAP_EDITOR
 Class58=CEditActionDlg
-Resource72=IDD_DCI_TRANSFORM
+Resource72=IDA_EVENT_EDITOR
 Class59=CActionSelDlg
-Resource73=IDD_GRAPH_PROP_DATA
+Resource73=IDD_OBJECT_CAPS
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_OBJECT_COND_GENERAL
+Resource76=IDD_NEW_ACTION
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_SELECT_USER
+Resource77=IDD_DCI_SCHEDULE
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_LASTVAL_PROP
-Resource84=IDD_SELECT_OBJECT
+Resource83=IDD_REQUEST_PROCESSING
+Resource84=IDD_SUBMAP_BKGND
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDM_VIEW_SPECIFIC
-Resource86=IDD_CREATE_TG
+Resource85=IDM_CONTEXT
+Resource86=IDA_ACTION_EDITOR
 Class68=CTrapEditor
-Resource87=IDD_USER_PROPERTIES
-Resource88=IDD_INPUT_BOX
-Resource89=IDA_DC_EDITOR
+Resource87=IDD_OBJTOOL_GENERAL
+Resource88=IDA_DC_EDITOR
+Resource89=IDD_DESKTOP_SAVE_AS
 Class69=CDataQueryDlg
-Resource90=IDD_DCI_DATA_EXPORT
+Resource90=IDD_OBJECT_GENERAL
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_CREATE_CONTAINER
-Resource93=IDD_ABOUTBOX
+Resource92=IDA_ALARM_BROWSER
+Resource93=IDD_LASTVAL_PROP
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_OBJECT_SECURITY
+Resource94=IDR_MAINFRAME
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDD_NEW_OBJECT_TOOL
+Resource98=IDD_THRESHOLD
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_OBJTOOL_OPTIONS
+Resource129=IDD_MIB_BROWSER
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,51 +270,52 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_EDIT_VARIABLE
-Resource141=IDA_ALARM_BROWSER
-Resource142=IDD_EDIT_RULE_SEVERITY
-Resource143=IDD_ACTION_PROPERTIES
-Resource144=IDD_NEW_ACTION
-Resource145=IDA_AGENT_CFG_EDITOR
-Resource146=IDD_OBJECT_COND_SCRIPT
-Resource147=IDD_SELECT_AGENT_PARAM
-Resource148=IDD_OBJECT_COND_DATA
-Resource149=IDD_CREATE_NETSRV
-Resource150=IDD_DCI_COLLECTION
-Resource151=IDA_MDI_DEFAULT
-Resource152=IDR_MAINFRAME
-Resource153=IDA_OBJECT_TOOLS_EDITOR
-Resource154=IDD_THRESHOLD
-Resource155=IDD_DESKTOP_SAVE_AS
-Resource156=IDD_SELECT_EVENT
-Resource157=IDA_ACTION_EDITOR
-Resource158=IDA_EVENT_EDITOR
-Resource159=IDA_NETMAP
-Resource160=IDD_REMOVE_TEMPLATE
-Resource161=IDD_DCI_SCHEDULE
-Resource162=IDA_GRAPH
-Resource163=IDD_OBJTOOL_GENERAL
-Resource164=IDA_SERVER_CFG_EDITOR
-Resource165=IDD_EDIT_EVENT
-Resource166=IDA_LAST_VALUES
-Resource167=IDA_TRAP_EDITOR
-Resource168=IDD_OBJECT_NODE_GENERAL
-Resource169=IDD_SNMP_WALK
-Resource170=IDD_OBJECT_CAPS
-Resource171=IDD_OBJECT_GENERAL
+Resource140=IDD_OBJECT_SECURITY
+Resource141=IDD_DATA_QUERY
+Resource142=IDD_OBJECT_COND_SCRIPT
+Resource143=IDA_OBJECT_BROWSER
+Resource144=IDA_MDI_DEFAULT
+Resource145=IDD_OBJECT_RELATIONS
+Resource146=IDD_ACTION_PROPERTIES
+Resource147=IDA_AGENT_CFG_EDITOR
+Resource148=IDD_SELECT_ACTION
+Resource149=IDA_OBJECT_TOOLS_EDITOR
+Resource150=IDD_CHANGE_IP
+Resource151=IDD_DCI_DATA_EXPORT
+Resource152=IDD_EDIT_IP_SUBNET
+Resource153=IDD_GRAPH_PROP_SETTINGS
+Resource154=IDD_OBJTOOL_COLUMNS
+Resource155=IDD_EDIT_EVENT
+Resource156=IDD_CREATE_CONDITION
+Resource157=IDD_SELECT_INTERNAL_ITEM
+Resource158=IDD_EDIT_TRAP_ARG
+Resource159=IDD_EDIT_TRAP
+Resource160=IDD_EDIT_RULE_COMMENT
+Resource161=IDD_SET_PASSWORD
+Resource162=IDD_INPUT_BOX
+Resource163=IDD_DCI_THRESHOLDS
+Resource164=IDD_OBJECT_NODE_POLL
+Resource165=IDD_DCI_TRANSFORM
+Resource166=IDD_OBJECT_NETSRV_GENERAL
+Resource167=IDD_SELECT_AGENT_PARAM
+Resource168=IDD_EDIT_VARIABLE
+Resource169=IDD_OBJECT_PRESENTATION
+Resource170=IDD_CREATE_VPNC
+Resource171=IDD_SAVE_AGENT_CFG
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_SELECT_INTERNAL_ITEM
-Resource173=IDM_CONTEXT
+Resource172=IDA_SERVER_CFG_EDITOR
+Resource173=IDM_VIEW_SPECIFIC
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDD_EDIT_IP_SUBNET
+Resource174=IDD_USER_PROPERTIES
 Class127=CAddDCIDlg
-Resource175=IDD_EDIT_TRAP_ARG
+Resource175=IDA_LAST_VALUES
 Class128=CCondDCIPropDlg
-Resource176=IDD_COND_DCI_PROP
+Resource176=IDD_CREATE_CONTAINER
+Resource177=IDD_COND_DCI_PROP
 
 [CLS:CConsoleApp]
 Type=0
@@ -891,7 +892,16 @@ Command166=ID_MAP_SHOW_STATUSBAR
 Command167=ID_MAP_SAVE
 Command168=ID_MAP_REDOLAYOUT
 Command169=ID_MAP_SETBACKGROUND
-CommandCount=169
+Command170=ID_DATA_SCALEVALUE
+Command171=ID_DATA_SCALE_NORMAL
+Command172=ID_DATA_SCALE_KBYTES
+Command173=ID_DATA_SCALE_KILO
+Command174=ID_DATA_SCALE_MBYTES
+Command175=ID_DATA_SCALE_MEGA
+Command176=ID_DATA_SCALE_GBYTES
+Command177=ID_DATA_SCALE_GIGA
+Command178=ID_DATA_COPYTOCLIPBOARD
+CommandCount=178
 
 [ACL:IDA_MDI_DEFAULT]
 Type=1
@@ -1736,7 +1746,16 @@ Command146=ID_SCRIPT_VIEWASTREE
 Command147=ID_DESKTOP_COPY
 Command148=ID_DESKTOP_MOVE
 Command149=ID_DESKTOP_DELETE
-CommandCount=149
+Command150=ID_DATA_SCALEVALUE
+Command151=ID_DATA_SCALE_NORMAL
+Command152=ID_DATA_SCALE_KBYTES
+Command153=ID_DATA_SCALE_KILO
+Command154=ID_DATA_SCALE_MBYTES
+Command155=ID_DATA_SCALE_MEGA
+Command156=ID_DATA_SCALE_GBYTES
+Command157=ID_DATA_SCALE_GIGA
+Command158=ID_DATA_COPYTOCLIPBOARD
+CommandCount=158
 
 [MNU:IDM_CONTEXT (English (U.S.))]
 Type=1
@@ -4752,4 +4771,18 @@ BaseClass=CDialog
 Filter=D
 VirtualFilter=dWC
 LastObject=CCondDCIPropDlg
+
+[ACL:IDA_DATA_VIEW]
+Type=1
+Class=?
+Command1=ID_DATA_COPYTOCLIPBOARD
+Command2=ID_DATA_SCALE_GBYTES
+Command3=ID_DATA_SCALE_GIGA
+Command4=ID_DATA_SCALE_KBYTES
+Command5=ID_DATA_SCALE_KILO
+Command6=ID_DATA_SCALE_MBYTES
+Command7=ID_DATA_SCALE_MEGA
+Command8=ID_DATA_SCALE_NORMAL
+Command9=ID_DATA_SCALEVALUE
+CommandCount=9
 
